<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">gCactus</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="button_scan">Scan</string>
    <string name="send_data">Send Data</string>
    <string name="send_text">Data sending Area</string>
    <string name="received_text">Received Data: </string>
    <string name="button_send1">Send 1</string>

    <!--Main activity-->
    <string name="display_results">Get Results</string>
    <string name="send_both">Calibrate</string>
    <string name="measure">Measure</string>
    <string name="cancel_alarm">Cancel Alarm</string>

    <!--Categories-->
    <string name="eye_cat">Eye Colour</string>
    <string name="hair_cat">Hair Colour</string>
    <string name="skin_cat">Skin Colour</string>
    <string name="freckles_cat">Freckles</string>
    <string name="burn_cat">Inclination to sunburn</string>
    <string name="brown_freq_cat">Tendency to tan</string>
    <string name="brown_int_cat">Intensity of tan</string>
    <string name="face_cat">Face sensitivity</string>
    <string name="tan_freq_cat">Tan frequency</string>
    <string name="tan_hist_cat">Tan history</string>
    <string name="instruction_title">Instructions:</string>

    <!-- Menu items -->
    <string name="menu_connecting">Connecting</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_disconnecting">Disconnecting</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_scanning">Scanning</string>
    <string name="blank"></string>
    <string name="action_settings">Action settings</string>
    <string name="title_activity_display_message">Results</string>

    <!--Radio button-->
    <string name="swim_yes">Yes</string>
    <string name="swim_no">No</string>
    <string name="is_swimming">Swimming later?</string>

    <!--Notification-->
    <string name="advice">Please head indoor or seek shade</string>
    <string name="title_activity_notification_receiver">Received Notification</string>
    <string name="alarm_advice">Advice</string>
    <string name="did_you_know">Did you know?</string>

    <!--Display message activity-->
    <string name="make_alarm">Set Alarm</string>
    <string name="skin_type">Skin Type</string>
    <string name="uv_index">UV Index</string>
    <string name="uv_exp">Max UV Exposure (min)</string>
    <string name="psi_lvl">PSI Level</string>
    <string name="spf_cat">SPF of Sunblock</string>
    <string name="specify">Please specify:</string>


</resources>
