<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_scan"
            android:onClick="scanDevice"/>
        <Button
            android:id="@+id/buttonSerialSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_data"
            android:onClick="sendData"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSend1"
            android:text="@string/button_send1"
            android:onClick="sendData1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/serialSendText"
            android:layout_width="310dp"
            android:layout_height="40dp"
            android:layout_marginTop="22dp"
            android:background="#555555"
            android:bufferType="editable"
            android:ems="10"
            android:inputType="numberDecimal|numberSigned"
            android:text="@string/send_text"
            android:textColor="#999999"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:text="@string/received_text"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/serialReceivedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/skinCat"
            android:text="@string/skin_cat"
            android:gravity="center"
            android:textSize="16sp"/>
        <Spinner
            android:id="@+id/skinSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </LinearLayout>


</LinearLayout>
