<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.blunobasicdemo.DisplayMessageActivity"
    android:stretchColumns="0,1,2">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5sp">
    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skin_type"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="#E52B50"
            android:layout_margin="2dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uv_index"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="#E52B50"
            android:layout_margin="2dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uv_exp"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="#E52B50"
            android:layout_margin="2dip"/>

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dip">
    <!--LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/skinType"
            android:text=" Result 1"
            android:gravity="center"
            android:textSize="15sp"
            android:background="#A4C639"
            android:layout_margin="2dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uvIndex"
            android:text=" Result 2"
            android:gravity="center"
            android:textSize="15sp"
            android:background="#A4C639"
            android:layout_margin="2dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/uvExp"
            android:text=" Result 3"
            android:gravity="center"
            android:textSize="15sp"
            android:background="#A4C639"
            android:layout_margin="2dip"/>
    </TableRow>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_swimming"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="17sp"
        android:background="#71A6D2"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/isSwimming"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="#87CEEB">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swimYes"
            android:text="@string/swim_yes"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swimNo"
            android:text="@string/swim_no"
            android:checked="true"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/makeAlarm"
        android:text="@string/make_alarm"
        android:paddingTop="10sp"/>
    <TextView
        android:id="@+id/resultDisplay"
        android:textSize="16sp"
        android:editable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</TableLayout>
